--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,69 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+/* OBECNÁ NASTAVENÍ */
+.outerBox {
+  width: 100%;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.innerBox {
+  width: 80%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+
+/* FIRST SECTION - HEADER */
+.header {
+  height: auto;
+  position: absolute;
+  background-color:  rgba(20, 59, 83, 0.6);
+}
+
+.header .innerBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: var(--space-m);
+  margin-bottom: var(--space-m);
+  box-shadow: var(--main-shadow);
+}
+
+#logo:hover {
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  box-shadow: rgba(255, 255, 255, 0.2) 0 0 20px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.header ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  margin-top: var(--space-m);
+  margin-bottom: var(--space-m);
+}
+
+.header ul li {
+  list-style: none;
+  font-family: var(--main-font);
+  font-size: var(--size-m);
+  margin-left: var(--space-xxl);
+}
+
+.header ul li a {
+  text-decoration: none;
+  color: var(--second-color);
+  padding-bottom: var(--space-xs);
+}
+
+.header ul li a:hover {
+  cursor: pointer;
+  color: var(--third-color);
+  border-bottom: 1px solid var(--third-color);
 }
