--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body, html {
 
 
 #mainContainer {
-  background-color: var(--main-color);
+  background-color: var(--second-color);
   width: 100vw;
   height: 200vh;
   margin: 0;
