--- a/src/index.css
+++ b/src/index.css
@@ -130,11 +130,6 @@
   width: 40%;
 }
 
-.aboutUs .oNas img {
-  width: 400px;
-  height: 400px;
-}
-
 .aboutUs .oNas .povidani {
   width: 60%;
   color: var(--second-color);
@@ -210,12 +205,12 @@
 }
 
 .menu .leftColumn {
-  width: 50%;
+  width: 70%;
   text-align: left;
 }
 
 .menu .rightColumn {
-  width: 50%;
+  width: 30%;
   text-align: right;
 }
 
@@ -372,15 +367,18 @@
 
 
 
+
 /* RESPONSIVITY */
 /* Větší obrazovky */
 @media only screen and (min-width: 1600px) {
   .aboutUs h1 {
-    font-size: var(--size-xxxl);
+    font-size: calc(var(--size-m) * 3);
+    margin-top: var(--space-m);
+    margin-bottom: var(--space-xxl);
   }
 
   .aboutUs .oNas .povidani {
-    font-size: var(--size-m);
+    font-size: var(--size-l);
   }
 
   .header ul li {
@@ -454,12 +452,232 @@
 }
 
 
-/* Menší obrazovky */
 
+
+
+
+/* Menší obrazovky */
+@media only screen and (max-width: 1400px) {
+  .aboutUs .oNas .povidani {
+    font-size: var(--size-s2);
+    margin-left: var(--space-m);
+  }
+
+  .menu .columns {
+    font-size: var(--size-s);
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .nabidka .nabidkaGrid {
+    width: 70%;
+    grid-template-areas:
+    "kava"
+    "caj"
+    "limo"
+    "jidlo";
+  }
+
+  .nabidka .kava {
+    margin-right: 0;
+  }
+
+  .nabidka .jidlo {
+    margin-right: 0;
+  }
+
+  .contactPage .contactInfo {
+    margin-right: var(--space-xl);
+  }
+
+  .contactPage .contactMap {
+    margin-left: var(--space-xl);
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .contact .contactPage {
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+  }
+
+  .contactPage .contactMap {
+    order: -1;
+    margin-bottom: var(--space-xxxl);
+    margin-left: 0;
+  }
+
+  .contactPage .contactInfo {
+    width: 80%;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 0;
+  }
+
+  .adresa, .oteviracka, .contactLinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+  }
+}
 
 @media only screen and (max-width: 1100px) {
   /* HEADER */
   .header .innerBox ul {
     display: none;
+  }
+
+  .aboutUs .oNas {
+    flex-direction: column;
+    justify-content: start;
+  }
+
+  .aboutUs .oNas .povidani {
+    width: 100%;
+    order: -1;
+    margin-bottom: var(--space-xl);
+    margin-left: 0;
+  }
+
+  .aboutUs .oNas .carouselSection {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: var(--space-l);
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .aboutUs h1 {
+    margin-top: var(--space-m);
+  }
+
+  .nabidka .nabidkaGrid {
+    width: 100%;
+  }
+
+  .contactPage .contactInfo {
+    width: 100%;
+    font-size: var(--size-s);
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .contactPage .contactInfo {
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+  }
+
+  .adresa,
+  .oteviracka {
+    margin-bottom: var(--space-xl);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  .aboutUs h1 {
+    font-size: var(--size-xl);
+    margin-top: var(--space-xs);
+  }
+
+  .aboutUs .oNas .povidani {
+    font-size: var(--size-s);
+  }
+
+  .menu h3 {
+    font-size: var(--size-m);
+  }
+
+  .menu .columns {
+    font-size: var(--size-xs);
+  }
+
+  .nabidka h2,
+  .contact h2 {
+    font-size: var(--size-l);
+  }
+
+}
+
+@media only screen and (max-width: 500px) {
+  .aboutUs h1 {
+    font-size: var(--size-l);
+  }
+  
+  .aboutUs .oNas .povidani {
+    font-size: var(--size-xs);
+  }
+
+  .menu .leftColumn {
+    width: 75%;
+  }
+  
+  .menu .rightColumn {
+    width: 25%;
+  }
+
+  .contactPage .contactMap {
+    margin-bottom: var(--space-xl);
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #logo {
+    width: 40px;
+    height: 40px;
+    margin-top: var(--space-l);
+  }
+
+  .header .innerBox {
+    padding-left: var(--space-s);
+    padding-right: var(--space-s);
+  }
+
+  .aboutUs h1 {
+    font-size: var(--size-m);
+  }
+
+  .menu {
+    padding: var(--space-s) var(--space-xs) 0 var(--space-xs);
+  }
+
+  .menu .leftColumn ul {
+    list-style: none;
+    padding-left: 0;
+  }
+
+  .nabidka h2,
+  .contact h2 {
+    font-size: var(--size-m);
+  }
+
+  .contactPage .contactMap {
+    margin-bottom: var(--space-l);
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  .innerBox {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .innerBox {
+    width: 85%;
+  }
+}
+
+@media only screen and (max-width: 310px) {
+  .innerBox {
+    width: 90%;
   }
 }
