--- a/src/CarouselGallery.css
+++ b/src/CarouselGallery.css
@@ -9,6 +9,106 @@
       height: 400px;
       object-fit: cover;
     }
+
+
+
+  /* RESPONSIVITY  */
+  @media only screen and (max-width: 1400px) {
+    .carousel {
+      width: 350px;
+      height: 350px;
+    }
+    
+    .carousel-item img {
+        width: 350px;
+        height: 350px;
+    }
+  }
+
+  @media only screen and (max-width: 1100px) {
+    .carousel {
+      width: 450px;
+      height: 450px;
+    }
+    
+    .carousel-item img {
+        width: 450px;
+        height: 450px;
+    }
+  }
+
+  @media only screen and (max-width: 900px) {
+    .carousel {
+      width: 400px;
+      height: 400px;
+    }
+    
+    .carousel-item img {
+        width: 400px;
+        height: 400px;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .carousel {
+      width: 350px;
+      height: 350px;
+    }
+    
+    .carousel-item img {
+        width: 350px;
+        height: 350px;
+      }
+  }
+
+  @media only screen and (max-width: 500px) {
+    .carousel {
+      width: 300px;
+      height: 300px;
+    }
+    
+    .carousel-item img {
+        width: 300px;
+        height: 300px;
+      }
+  }
+
+  @media only screen and (max-width: 400px) {
+    .carousel {
+      width: 270px;
+      height: 270px;
+    }
+    
+    .carousel-item img {
+        width: 270px;
+        height: 270px;
+      }
+  }
+
+  @media only screen and (max-width: 350px) {
+    .carousel {
+      width: 250px;
+      height: 250px;
+    }
+    
+    .carousel-item img {
+        width: 250px;
+        height: 250px;
+      }
+  }
+
+  @media only screen and (max-width: 300px) {
+    .carousel {
+      width: 200px;
+      height: 200px;
+    }
+    
+    .carousel-item img {
+        width: 200px;
+        height: 200px;
+      }
+  }
+  
   
   /* RESPONSIVITY */
   
