--- a/src/HamburgerMenu.css
+++ b/src/HamburgerMenu.css
@@ -50,11 +50,13 @@
     border-radius: 10px;
     display: none;
     flex-direction: column;
+    justify-content: center;
     top: 50px;
     right: -40px;
     position: absolute;
     background-color: white;
     width: 140px;
+    height: 160px;
     padding: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: var(--main-font);
@@ -83,6 +85,14 @@
 @media only screen and (max-width: 1100px) {
   .hamburger-menu {
       display: flex;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .nav-menu {
+    height: 140px;
+    width: 130px;
+    font-size: var(--size-xs);
   }
 }
 
