--- a/src/App.css
+++ b/src/App.css
@@ -55,5 +55,7 @@ body, html {
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  overflow: hidden;
+  position: relative;
 }
 
