--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,19 @@
   font-family: var(--main-font);
 }
 
+#dots1 {
+  position: absolute;
+  top: 200px;
+  right: -30px;
+  display: none;
+}
+
+#dots2 {
+  position: absolute;
+  top: 150px;
+  left: -270px;
+  display: none;
+}
 
 /* --------------------------------------------------------------------------------------- */
 /* --------------------------------------------------------------------------------------- */
@@ -413,6 +426,10 @@
 }
 
 @media only screen and (min-width: 2000px) {
+  #dots1,
+  #dots2 {
+    display: block;
+  }
   .innerBox {
     width: 70%;
   }
